tests/NormalTests/paczka2/big_fuzzy/85078404.err
Error in line 1: LyK S776 51,6
Error in line 2: uioDEH A174 13,8
Error in line 4: uioDEH A312 60,4
Error in line 5: QRx7O A312 59,3
Error in line 24: oEKgto A174 52,3
Error in line 38: uioDEH A174 19,2
Error in line 32: jWrpmoneoS A312 7,6
Error in line 53: uioDEH A312 62,68
Error in line 51: pM8 S388 42,1
Error in line 60: oEKgto S388 41,8
Error in line 66: oEKgto S388 36,6
Error in line 48: QRx7O A174 9,7
Error in line 73: S776 S388 -3,1
Error in line 57: uioDEH A312 161,4
Error in line 67: oEKgto A32 92,3
Error in line 83: uioDEH S776 400,8
Error in line 93: pM8 A174 13,3
Error in line 94: pM8 S776 9,3
Error in line 95: oEKgto A312 38,8
Error in line 103: uioDEH A312 57,6
Error in line 110: S776 S388 248,3
Error in line 114: S776 A312 128,7
Error in line 117: pM8 A312 16,8
Error in line 104: oEKgto S776 244,0
Error in line 123: S776 A174 54,7
Error in line 125: oEKgto A174 62,2
Error in line 119: QRx7O S388 10,8
Error in line 138: QRx7O S776 55,3
Error in line 141: pM8 S776 68,5
Error in line 116: LyK S776 29,7
Error in line 152: pM8 S776 5,6
Error in line 154: jWrpmoneoS S388 24,9
Error in line 156: uioDEH S388 33,7
Error in line 159: oEKgto A312 96,4
Error in line 163: pM8 A 74  4,0
Error in line 165: oEKgto S388 98,2
Error in line 168: S776 S776 54,5
Error in line 174: oEKgto A174 45,4
Error in line 155: pM8 A174 19,5
Error in line 167: QRx7O A312 64,7
Error in line 190: LyK S776 36,9
Error in line 196: pM8 A312 1,6
Error in line 197: LyK A312 24,4
Error in line 198: pM8 S388 56,5
Error in line 222: oEKgto S388 30,1
Error in line 223: oEKgto A174 96,9
Error in line 230: oEKgto S388 87,7
Error in line 237: QRx7O A312 20,5
Error in line 238: QRx7O A174 73,3
